[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/small_sign.dae" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/SignSmall.gd" type="Script" id=2]
[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/NotificationArea.gd" type="Script" id=3]






[sub_resource type="CylinderShape" id=1]
radius = 1.2
height = 1.8

[sub_resource type="SphereShape" id=2]
radius = 50.0

[node name="SignSmall" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="sign_small" parent="." index="0"]
editor/display_folded = true

[node name="UseRange" type="Area" parent="." index="2"]
editor/display_folded = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="UseRange" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.906596, 0 )
shape = SubResource( 1 )

[node name="SignNotificationArea" type="Area" parent="." index="3"]
input_ray_pickable = false
collision_mask = 2
script = ExtResource( 3 )
town_name = "Mah Boy Village"

[node name="CollisionShape" type="CollisionShape" parent="SignNotificationArea" index="0"]
shape = SubResource( 2 )
[connection signal="input_event" from="sign_small/col" to="." method="_on_col_input_event"]
[connection signal="mouse_entered" from="sign_small/col" to="." method="_on_col_mouse_entered"]
[connection signal="mouse_exited" from="sign_small/col" to="." method="_on_col_mouse_exited"]
[connection signal="body_entered" from="SignNotificationArea" to="SignNotificationArea" method="_on_NotificationArea_body_entered"]
