[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/SignSmall.gd" type="Script" id=2]
[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/sign_small.material" type="Material" id=3]
[ext_resource path="res://scenes/Game/Entity/Struct/BuildingMaterial.tres" type="Material" id=4]
[ext_resource path="res://scenes/Game/Entity/Struct/SignSmall/SignContentInput.gd" type="Script" id=5]
[ext_resource path="res://scenes/Game/Entity/InteractionRange.gd" type="Script" id=7]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cylinder"
surfaces/0 = {
"aabb": AABB( -0.515023, -0.1, -0.12, 1.01943, 1.6402, 0.336921 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 205, 204, 204, 189, 143, 194, 245, 189, 48, 0, 139, 0, 139, 3, 208, 127, 162, 56, 0, 60, 0, 0, 0, 0, 69, 37, 197, 63, 143, 194, 245, 189, 48, 0, 139, 0, 139, 3, 208, 127, 162, 56, 211, 49, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 189, 48, 0, 139, 0, 139, 3, 208, 127, 78, 56, 201, 49, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 189, 48, 0, 139, 0, 139, 3, 208, 127, 78, 56, 253, 59, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 189, 117, 0, 208, 0, 208, 0, 139, 127, 2, 54, 0, 60, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 189, 117, 0, 208, 0, 208, 0, 139, 127, 2, 54, 195, 49, 143, 194, 245, 61, 69, 37, 197, 63, 187, 58, 180, 49, 117, 0, 208, 0, 208, 0, 139, 127, 92, 53, 193, 49, 143, 194, 245, 61, 205, 204, 204, 189, 187, 58, 180, 49, 117, 0, 208, 0, 208, 0, 139, 127, 92, 53, 255, 59, 143, 194, 245, 61, 205, 204, 204, 189, 187, 58, 180, 49, 117, 0, 48, 0, 48, 0, 139, 127, 92, 53, 255, 59, 143, 194, 245, 61, 69, 37, 197, 63, 187, 58, 180, 49, 117, 0, 48, 0, 48, 0, 139, 127, 92, 53, 193, 49, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 61, 117, 0, 48, 0, 48, 0, 139, 127, 181, 52, 195, 49, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 61, 117, 0, 48, 0, 48, 0, 139, 127, 181, 52, 255, 59, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 61, 48, 0, 117, 0, 139, 2, 48, 127, 79, 55, 201, 49, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 61, 48, 0, 117, 0, 139, 2, 48, 127, 79, 55, 0, 60, 187, 58, 52, 178, 69, 37, 197, 63, 143, 194, 245, 61, 48, 0, 117, 0, 139, 2, 48, 127, 246, 55, 254, 59, 187, 58, 52, 178, 205, 204, 204, 189, 143, 194, 245, 61, 48, 0, 117, 0, 139, 2, 48, 127, 246, 55, 195, 49, 187, 58, 52, 178, 205, 204, 204, 189, 143, 194, 245, 61, 208, 0, 117, 0, 139, 254, 208, 127, 246, 55, 195, 49, 187, 58, 52, 178, 69, 37, 197, 63, 143, 194, 245, 61, 208, 0, 117, 0, 139, 254, 208, 127, 246, 55, 254, 59, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 61, 208, 0, 117, 0, 139, 254, 208, 127, 78, 56, 255, 59, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 61, 208, 0, 117, 0, 139, 254, 208, 127, 78, 56, 201, 49, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 61, 139, 0, 48, 0, 208, 0, 139, 127, 2, 54, 195, 49, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 61, 139, 0, 48, 0, 208, 0, 139, 127, 2, 54, 0, 60, 143, 194, 245, 189, 69, 37, 197, 63, 85, 172, 196, 176, 139, 0, 48, 0, 208, 0, 139, 127, 169, 54, 255, 59, 143, 194, 245, 189, 205, 204, 204, 189, 85, 172, 196, 176, 139, 0, 48, 0, 208, 0, 139, 127, 169, 54, 193, 49, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 189, 0, 127, 0, 0, 48, 0, 117, 127, 207, 52, 108, 44, 0, 0, 0, 0, 69, 37, 197, 63, 143, 194, 245, 189, 0, 127, 0, 0, 48, 0, 117, 127, 80, 52, 128, 46, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 189, 0, 127, 0, 0, 48, 0, 117, 127, 80, 52, 184, 48, 143, 194, 245, 189, 69, 37, 197, 63, 85, 172, 196, 176, 0, 127, 0, 0, 48, 0, 117, 127, 207, 52, 193, 49, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 61, 0, 127, 0, 0, 48, 0, 117, 127, 131, 53, 193, 49, 187, 58, 52, 178, 69, 37, 197, 63, 143, 194, 245, 61, 0, 127, 0, 0, 48, 0, 117, 127, 2, 54, 183, 48, 79, 199, 173, 61, 69, 37, 197, 63, 79, 199, 173, 61, 0, 127, 0, 0, 48, 0, 117, 127, 2, 54, 126, 46, 143, 194, 245, 61, 69, 37, 197, 63, 187, 58, 180, 49, 0, 127, 0, 0, 48, 0, 117, 127, 131, 53, 106, 44, 143, 194, 245, 189, 205, 204, 204, 189, 85, 172, 196, 176, 139, 0, 208, 0, 48, 0, 139, 127, 169, 54, 193, 49, 143, 194, 245, 189, 69, 37, 197, 63, 85, 172, 196, 176, 139, 0, 208, 0, 48, 0, 139, 127, 169, 54, 255, 59, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 189, 139, 0, 208, 0, 48, 0, 139, 127, 79, 55, 255, 59, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 189, 139, 0, 208, 0, 48, 0, 139, 127, 79, 55, 195, 49, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 189, 208, 0, 139, 0, 139, 253, 48, 127, 245, 56, 253, 59, 81, 199, 173, 189, 69, 37, 197, 63, 78, 199, 173, 189, 208, 0, 139, 0, 139, 253, 48, 127, 245, 56, 201, 49, 0, 0, 0, 0, 69, 37, 197, 63, 143, 194, 245, 189, 208, 0, 139, 0, 139, 253, 48, 127, 162, 56, 211, 49, 0, 0, 0, 0, 205, 204, 204, 189, 143, 194, 245, 189, 208, 0, 139, 0, 139, 253, 48, 127, 162, 56, 0, 60, 0, 0, 0, 0, 205, 204, 204, 189, 143, 194, 245, 189, 0, 129, 0, 0, 208, 0, 139, 127, 128, 56, 131, 46, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 189, 0, 129, 0, 0, 208, 0, 139, 127, 65, 56, 110, 44, 143, 194, 245, 61, 205, 204, 204, 189, 187, 58, 180, 49, 0, 129, 0, 0, 208, 0, 139, 127, 206, 55, 109, 44, 79, 199, 173, 61, 205, 204, 204, 189, 79, 199, 173, 61, 0, 129, 0, 0, 208, 0, 139, 127, 79, 55, 128, 46, 187, 58, 52, 178, 205, 204, 204, 189, 143, 194, 245, 61, 0, 129, 0, 0, 208, 0, 139, 127, 79, 55, 184, 48, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 61, 0, 129, 0, 0, 208, 0, 139, 127, 206, 55, 194, 49, 143, 194, 245, 189, 205, 204, 204, 189, 85, 172, 196, 176, 0, 129, 0, 0, 208, 0, 139, 127, 65, 56, 195, 49, 81, 199, 173, 189, 205, 204, 204, 189, 78, 199, 173, 189, 0, 129, 0, 0, 208, 0, 139, 127, 128, 56, 185, 48, 27, 56, 159, 190, 104, 133, 87, 63, 142, 138, 22, 62, 0, 0, 126, 0, 126, 254, 0, 127, 0, 0, 24, 59, 147, 230, 154, 62, 112, 27, 84, 63, 142, 138, 22, 62, 0, 0, 126, 0, 126, 254, 0, 127, 181, 52, 24, 59, 64, 91, 161, 62, 218, 77, 180, 63, 57, 222, 25, 62, 0, 0, 126, 0, 126, 254, 0, 127, 181, 52, 199, 56, 110, 195, 152, 190, 214, 2, 182, 63, 57, 222, 25, 62, 0, 0, 126, 0, 126, 254, 0, 127, 0, 0, 199, 56, 22, 234, 159, 190, 88, 135, 71, 63, 164, 175, 28, 62, 0, 12, 126, 0, 126, 254, 0, 127, 0, 0, 88, 59, 152, 52, 154, 62, 97, 29, 68, 63, 164, 175, 28, 62, 0, 12, 126, 0, 126, 254, 0, 127, 181, 52, 88, 59, 147, 230, 154, 62, 112, 27, 84, 63, 142, 138, 22, 62, 0, 12, 126, 0, 126, 254, 0, 127, 181, 52, 24, 59, 27, 56, 159, 190, 104, 133, 87, 63, 142, 138, 22, 62, 0, 12, 126, 0, 126, 254, 0, 127, 0, 0, 24, 59, 193, 179, 161, 190, 196, 103, 30, 63, 124, 32, 94, 62, 1, 54, 114, 0, 126, 254, 0, 127, 0, 0, 255, 59, 237, 106, 152, 62, 204, 253, 26, 63, 124, 32, 94, 62, 1, 54, 114, 0, 126, 254, 0, 127, 181, 52, 0, 60, 182, 96, 153, 62, 128, 19, 49, 63, 152, 175, 51, 62, 1, 54, 114, 0, 126, 254, 0, 127, 181, 52, 165, 59, 248, 189, 160, 190, 118, 125, 52, 63, 152, 175, 51, 62, 1, 54, 114, 0, 126, 254, 0, 127, 0, 0, 165, 59, 248, 189, 160, 190, 118, 125, 52, 63, 152, 175, 51, 62, 0, 36, 121, 0, 126, 254, 0, 127, 0, 0, 165, 59, 182, 96, 153, 62, 128, 19, 49, 63, 152, 175, 51, 62, 0, 36, 121, 0, 126, 254, 0, 127, 181, 52, 165, 59, 152, 52, 154, 62, 97, 29, 68, 63, 164, 175, 28, 62, 0, 36, 121, 0, 126, 254, 0, 127, 181, 52, 88, 59, 22, 234, 159, 190, 88, 135, 71, 63, 164, 175, 28, 62, 0, 36, 121, 0, 126, 254, 0, 127, 0, 0, 88, 59, 74, 84, 1, 191, 202, 132, 152, 63, 231, 44, 19, 62, 130, 4, 0, 0, 0, 0, 127, 127, 206, 56, 201, 49, 23, 145, 253, 190, 154, 1, 187, 63, 231, 44, 19, 62, 130, 4, 0, 0, 0, 0, 127, 127, 206, 56, 230, 41, 23, 145, 253, 190, 154, 1, 187, 63, 14, 182, 213, 61, 130, 4, 0, 0, 0, 0, 127, 127, 167, 56, 230, 41, 74, 84, 1, 191, 202, 132, 152, 63, 14, 182, 213, 61, 130, 4, 0, 0, 0, 0, 127, 127, 167, 56, 201, 49, 74, 84, 1, 191, 202, 132, 152, 63, 14, 182, 213, 61, 0, 0, 129, 0, 252, 130, 0, 127, 5, 59, 113, 10, 23, 145, 253, 190, 154, 1, 187, 63, 14, 182, 213, 61, 0, 0, 129, 0, 252, 130, 0, 127, 253, 57, 246, 9, 218, 10, 1, 63, 246, 72, 182, 63, 14, 182, 213, 61, 0, 0, 129, 0, 252, 130, 0, 127, 253, 57, 0, 56, 57, 254, 252, 62, 38, 204, 147, 63, 14, 182, 213, 61, 0, 0, 129, 0, 252, 130, 0, 127, 5, 59, 0, 56, 57, 254, 252, 62, 38, 204, 147, 63, 14, 182, 213, 61, 126, 252, 0, 0, 0, 0, 129, 127, 167, 56, 201, 49, 218, 10, 1, 63, 246, 72, 182, 63, 14, 182, 213, 61, 126, 252, 0, 0, 0, 0, 129, 127, 167, 56, 230, 41, 218, 10, 1, 63, 246, 72, 182, 63, 231, 44, 19, 62, 126, 252, 0, 0, 0, 0, 129, 127, 129, 56, 230, 41, 57, 254, 252, 62, 38, 204, 147, 63, 231, 44, 19, 62, 126, 252, 0, 0, 0, 0, 129, 127, 129, 56, 201, 49, 57, 254, 252, 62, 38, 204, 147, 63, 231, 44, 19, 62, 0, 0, 127, 0, 252, 130, 0, 127, 253, 57, 0, 56, 218, 10, 1, 63, 246, 72, 182, 63, 231, 44, 19, 62, 0, 0, 127, 0, 252, 130, 0, 127, 245, 56, 0, 56, 23, 145, 253, 190, 154, 1, 187, 63, 231, 44, 19, 62, 0, 0, 127, 0, 252, 130, 0, 127, 245, 56, 255, 59, 74, 84, 1, 191, 202, 132, 152, 63, 231, 44, 19, 62, 0, 0, 127, 0, 252, 130, 0, 127, 253, 57, 0, 60, 74, 84, 1, 191, 202, 132, 152, 63, 14, 182, 213, 61, 252, 130, 0, 0, 0, 0, 130, 127, 219, 59, 0, 56, 57, 254, 252, 62, 38, 204, 147, 63, 14, 182, 213, 61, 252, 130, 0, 0, 0, 0, 130, 127, 219, 59, 135, 13, 57, 254, 252, 62, 38, 204, 147, 63, 231, 44, 19, 62, 252, 130, 0, 0, 0, 0, 130, 127, 181, 59, 247, 12, 74, 84, 1, 191, 202, 132, 152, 63, 231, 44, 19, 62, 252, 130, 0, 0, 0, 0, 130, 127, 181, 59, 0, 56, 218, 10, 1, 63, 246, 72, 182, 63, 14, 182, 213, 61, 4, 126, 0, 0, 0, 0, 126, 127, 181, 59, 0, 56, 23, 145, 253, 190, 154, 1, 187, 63, 14, 182, 213, 61, 4, 126, 0, 0, 0, 0, 126, 127, 181, 59, 0, 60, 23, 145, 253, 190, 154, 1, 187, 63, 231, 44, 19, 62, 4, 126, 0, 0, 0, 0, 126, 127, 219, 59, 255, 59, 218, 10, 1, 63, 246, 72, 182, 63, 231, 44, 19, 62, 4, 126, 0, 0, 0, 0, 126, 127, 219, 59, 0, 56, 65, 15, 2, 191, 72, 197, 95, 63, 231, 44, 19, 62, 130, 0, 0, 0, 0, 0, 126, 127, 245, 56, 201, 49, 8, 150, 1, 191, 66, 101, 146, 63, 231, 44, 19, 62, 130, 0, 0, 0, 0, 0, 127, 127, 245, 56, 229, 41, 8, 150, 1, 191, 66, 101, 146, 63, 14, 182, 213, 61, 130, 0, 0, 0, 0, 0, 126, 127, 206, 56, 230, 41, 65, 15, 2, 191, 72, 197, 95, 63, 14, 182, 213, 61, 130, 0, 0, 0, 0, 0, 127, 127, 206, 56, 201, 49, 65, 15, 2, 191, 72, 197, 95, 63, 14, 182, 213, 61, 0, 0, 129, 0, 0, 130, 0, 127, 5, 59, 0, 56, 8, 150, 1, 191, 66, 101, 146, 63, 14, 182, 213, 61, 0, 0, 129, 0, 0, 130, 0, 127, 253, 57, 0, 56, 214, 208, 252, 62, 116, 132, 145, 63, 14, 182, 213, 61, 0, 0, 129, 0, 0, 130, 0, 127, 253, 57, 255, 59, 101, 222, 251, 62, 172, 3, 94, 63, 14, 182, 213, 61, 0, 0, 129, 0, 0, 130, 0, 127, 5, 59, 0, 60, 101, 222, 251, 62, 172, 3, 94, 63, 14, 182, 213, 61, 126, 0, 0, 0, 0, 0, 130, 127, 181, 52, 62, 53, 214, 208, 252, 62, 116, 132, 145, 63, 14, 182, 213, 61, 126, 0, 0, 0, 0, 0, 129, 127, 181, 52, 45, 50, 214, 208, 252, 62, 116, 132, 145, 63, 231, 44, 19, 62, 126, 0, 0, 0, 0, 0, 130, 127, 103, 52, 45, 50, 101, 222, 251, 62, 172, 3, 94, 63, 231, 44, 19, 62, 126, 0, 0, 0, 0, 0, 129, 127, 103, 52, 62, 53, 101, 222, 251, 62, 172, 3, 94, 63, 231, 44, 19, 62, 0, 0, 127, 0, 0, 130, 0, 127, 34, 52, 60, 46, 214, 208, 252, 62, 116, 132, 145, 63, 231, 44, 19, 62, 0, 0, 127, 0, 0, 130, 0, 127, 34, 48, 60, 46, 8, 150, 1, 191, 66, 101, 146, 63, 231, 44, 19, 62, 0, 0, 127, 0, 0, 130, 0, 127, 34, 48, 199, 56, 65, 15, 2, 191, 72, 197, 95, 63, 231, 44, 19, 62, 0, 0, 127, 0, 0, 130, 0, 127, 34, 52, 199, 56, 65, 15, 2, 191, 72, 197, 95, 63, 14, 182, 213, 61, 0, 130, 0, 0, 0, 0, 126, 127, 142, 59, 0, 56, 101, 222, 251, 62, 172, 3, 94, 63, 14, 182, 213, 61, 0, 130, 0, 0, 0, 0, 126, 127, 142, 59, 0, 60, 101, 222, 251, 62, 172, 3, 94, 63, 231, 44, 19, 62, 0, 130, 0, 0, 0, 0, 126, 127, 181, 59, 255, 59, 65, 15, 2, 191, 72, 197, 95, 63, 231, 44, 19, 62, 0, 130, 0, 0, 0, 0, 126, 127, 181, 59, 0, 56, 214, 208, 252, 62, 116, 132, 145, 63, 14, 182, 213, 61, 0, 126, 0, 0, 0, 0, 130, 127, 181, 59, 0, 56, 8, 150, 1, 191, 66, 101, 146, 63, 14, 182, 213, 61, 0, 126, 0, 0, 0, 0, 130, 127, 181, 59, 252, 11, 8, 150, 1, 191, 66, 101, 146, 63, 231, 44, 19, 62, 0, 126, 0, 0, 0, 0, 130, 127, 142, 59, 134, 11, 214, 208, 252, 62, 116, 132, 145, 63, 231, 44, 19, 62, 0, 126, 0, 0, 0, 0, 130, 127, 142, 59, 0, 56, 139, 216, 3, 191, 168, 180, 23, 63, 231, 44, 19, 62, 130, 1, 0, 0, 0, 0, 127, 127, 181, 52, 199, 56, 132, 243, 2, 191, 210, 184, 92, 63, 231, 44, 19, 62, 130, 1, 0, 0, 0, 0, 127, 127, 181, 52, 102, 55, 132, 243, 2, 191, 210, 184, 92, 63, 14, 182, 213, 61, 130, 1, 0, 0, 0, 0, 127, 127, 103, 52, 102, 55, 139, 216, 3, 191, 168, 180, 23, 63, 14, 182, 213, 61, 130, 1, 0, 0, 0, 0, 127, 127, 103, 52, 199, 56, 139, 216, 3, 191, 168, 180, 23, 63, 14, 182, 213, 61, 0, 0, 130, 0, 255, 130, 0, 127, 253, 57, 41, 11, 132, 243, 2, 191, 210, 184, 92, 63, 14, 182, 213, 61, 0, 0, 130, 0, 255, 130, 0, 127, 245, 56, 41, 10, 245, 13, 250, 62, 94, 103, 89, 63, 14, 182, 213, 61, 0, 0, 130, 0, 255, 130, 0, 127, 245, 56, 0, 56, 230, 67, 248, 62, 51, 99, 20, 63, 14, 182, 213, 61, 0, 0, 130, 0, 255, 130, 0, 127, 253, 57, 0, 56, 230, 67, 248, 62, 51, 99, 20, 63, 14, 182, 213, 61, 126, 255, 0, 0, 0, 0, 129, 127, 181, 52, 102, 55, 245, 13, 250, 62, 94, 103, 89, 63, 14, 182, 213, 61, 126, 255, 0, 0, 0, 0, 129, 127, 181, 52, 62, 53, 245, 13, 250, 62, 94, 103, 89, 63, 231, 44, 19, 62, 126, 255, 0, 0, 0, 0, 129, 127, 103, 52, 62, 53, 230, 67, 248, 62, 51, 99, 20, 63, 231, 44, 19, 62, 126, 255, 0, 0, 0, 0, 129, 127, 103, 52, 102, 55, 230, 67, 248, 62, 51, 99, 20, 63, 231, 44, 19, 62, 0, 0, 126, 0, 255, 130, 0, 127, 34, 48, 60, 46, 245, 13, 250, 62, 94, 103, 89, 63, 231, 44, 19, 62, 0, 0, 126, 0, 255, 130, 0, 127, 0, 0, 60, 46, 132, 243, 2, 191, 210, 184, 92, 63, 231, 44, 19, 62, 0, 0, 126, 0, 255, 130, 0, 127, 0, 0, 199, 56, 139, 216, 3, 191, 168, 180, 23, 63, 231, 44, 19, 62, 0, 0, 126, 0, 255, 130, 0, 127, 34, 48, 199, 56, 139, 216, 3, 191, 168, 180, 23, 63, 14, 182, 213, 61, 255, 130, 0, 0, 0, 0, 129, 127, 142, 59, 0, 56, 230, 67, 248, 62, 51, 99, 20, 63, 14, 182, 213, 61, 255, 130, 0, 0, 0, 0, 129, 127, 142, 59, 72, 11, 230, 67, 248, 62, 51, 99, 20, 63, 231, 44, 19, 62, 255, 130, 0, 0, 0, 0, 129, 127, 104, 59, 108, 11, 139, 216, 3, 191, 168, 180, 23, 63, 231, 44, 19, 62, 255, 130, 0, 0, 0, 0, 129, 127, 104, 59, 0, 56, 245, 13, 250, 62, 94, 103, 89, 63, 14, 182, 213, 61, 1, 126, 0, 0, 0, 0, 127, 127, 104, 59, 0, 56, 132, 243, 2, 191, 210, 184, 92, 63, 14, 182, 213, 61, 1, 126, 0, 0, 0, 0, 127, 127, 104, 59, 255, 59, 132, 243, 2, 191, 210, 184, 92, 63, 231, 44, 19, 62, 1, 126, 0, 0, 0, 0, 127, 127, 142, 59, 0, 60, 245, 13, 250, 62, 94, 103, 89, 63, 231, 44, 19, 62, 1, 126, 0, 0, 0, 0, 127, 127, 142, 59, 0, 56, 212, 190, 254, 190, 65, 238, 189, 63, 79, 172, 49, 62, 130, 3, 255, 0, 254, 140, 205, 127, 2, 55, 16, 48, 53, 114, 253, 190, 57, 106, 195, 63, 103, 251, 156, 61, 130, 3, 255, 0, 254, 140, 205, 127, 2, 55, 193, 49, 194, 216, 253, 190, 195, 206, 190, 63, 124, 169, 120, 61, 130, 3, 255, 0, 254, 140, 205, 127, 79, 55, 193, 49, 98, 37, 255, 190, 203, 82, 185, 63, 251, 88, 33, 62, 130, 3, 255, 0, 254, 140, 205, 127, 79, 55, 16, 48, 98, 37, 255, 190, 203, 82, 185, 63, 251, 88, 33, 62, 254, 140, 205, 0, 254, 205, 116, 127, 104, 59, 0, 0, 194, 216, 253, 190, 195, 206, 190, 63, 124, 169, 120, 61, 254, 140, 205, 0, 254, 205, 116, 127, 5, 59, 84, 10, 128, 237, 0, 63, 193, 61, 187, 63, 95, 183, 152, 61, 254, 140, 205, 0, 254, 205, 116, 127, 5, 59, 0, 56, 48, 71, 0, 63, 201, 193, 181, 63, 75, 138, 47, 62, 254, 140, 205, 0, 254, 205, 116, 127, 104, 59, 255, 55, 48, 71, 0, 63, 201, 193, 181, 63, 75, 138, 47, 62, 126, 253, 1, 0, 254, 140, 205, 127, 2, 55, 193, 49, 128, 237, 0, 63, 193, 61, 187, 63, 95, 183, 152, 61, 126, 253, 1, 0, 254, 140, 205, 127, 2, 55, 16, 48, 199, 32, 1, 63, 55, 217, 191, 63, 8, 94, 185, 61, 126, 253, 1, 0, 254, 140, 205, 127, 181, 54, 16, 48, 119, 122, 0, 63, 63, 93, 186, 63, 159, 221, 63, 62, 126, 253, 1, 0, 254, 140, 205, 127, 181, 54, 193, 49, 119, 122, 0, 63, 63, 93, 186, 63, 159, 221, 63, 62, 2, 116, 51, 0, 254, 205, 116, 127, 104, 59, 0, 56, 199, 32, 1, 63, 55, 217, 191, 63, 8, 94, 185, 61, 2, 116, 51, 0, 254, 205, 116, 127, 5, 59, 0, 56, 53, 114, 253, 190, 57, 106, 195, 63, 103, 251, 156, 61, 2, 116, 51, 0, 254, 205, 116, 127, 5, 59, 255, 59, 212, 190, 254, 190, 65, 238, 189, 63, 79, 172, 49, 62, 2, 116, 51, 0, 254, 205, 116, 127, 104, 59, 0, 60, 98, 37, 255, 190, 203, 82, 185, 63, 251, 88, 33, 62, 253, 205, 116, 0, 253, 140, 205, 127, 254, 59, 0, 56, 48, 71, 0, 63, 201, 193, 181, 63, 75, 138, 47, 62, 253, 205, 116, 0, 253, 140, 205, 127, 254, 59, 181, 10, 119, 122, 0, 63, 63, 93, 186, 63, 159, 221, 63, 62, 253, 205, 116, 0, 253, 140, 205, 127, 219, 59, 17, 13, 212, 190, 254, 190, 65, 238, 189, 63, 79, 172, 49, 62, 253, 205, 116, 0, 253, 140, 205, 127, 219, 59, 0, 56, 128, 237, 0, 63, 193, 61, 187, 63, 95, 183, 152, 61, 3, 51, 140, 0, 253, 140, 205, 127, 0, 60, 0, 60, 194, 216, 253, 190, 195, 206, 190, 63, 124, 169, 120, 61, 3, 51, 140, 0, 253, 140, 205, 127, 0, 60, 0, 56, 53, 114, 253, 190, 57, 106, 195, 63, 103, 251, 156, 61, 3, 51, 140, 0, 253, 140, 205, 127, 219, 59, 0, 56, 199, 32, 1, 63, 55, 217, 191, 63, 8, 94, 185, 61, 3, 51, 140, 0, 253, 140, 205, 127, 219, 59, 255, 59 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 24, 0, 28, 0, 27, 0, 24, 0, 29, 0, 28, 0, 24, 0, 30, 0, 29, 0, 24, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 40, 0, 44, 0, 43, 0, 40, 0, 45, 0, 44, 0, 40, 0, 46, 0, 45, 0, 40, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0, 72, 0, 74, 0, 73, 0, 72, 0, 75, 0, 74, 0, 76, 0, 78, 0, 77, 0, 76, 0, 79, 0, 78, 0, 80, 0, 82, 0, 81, 0, 80, 0, 83, 0, 82, 0, 84, 0, 86, 0, 85, 0, 84, 0, 87, 0, 86, 0, 88, 0, 90, 0, 89, 0, 88, 0, 91, 0, 90, 0, 92, 0, 94, 0, 93, 0, 92, 0, 95, 0, 94, 0, 96, 0, 98, 0, 97, 0, 96, 0, 99, 0, 98, 0, 100, 0, 102, 0, 101, 0, 100, 0, 103, 0, 102, 0, 104, 0, 106, 0, 105, 0, 104, 0, 107, 0, 106, 0, 108, 0, 110, 0, 109, 0, 108, 0, 111, 0, 110, 0, 112, 0, 114, 0, 113, 0, 112, 0, 115, 0, 114, 0, 116, 0, 118, 0, 117, 0, 116, 0, 119, 0, 118, 0, 120, 0, 122, 0, 121, 0, 120, 0, 123, 0, 122, 0, 124, 0, 126, 0, 125, 0, 124, 0, 127, 0, 126, 0, 128, 0, 130, 0, 129, 0, 128, 0, 131, 0, 130, 0, 132, 0, 134, 0, 133, 0, 132, 0, 135, 0, 134, 0, 136, 0, 138, 0, 137, 0, 136, 0, 139, 0, 138, 0, 140, 0, 142, 0, 141, 0, 140, 0, 143, 0, 142, 0, 144, 0, 146, 0, 145, 0, 144, 0, 147, 0, 146, 0, 148, 0, 150, 0, 149, 0, 148, 0, 151, 0, 150, 0, 152, 0, 154, 0, 153, 0, 152, 0, 155, 0, 154, 0, 156, 0, 158, 0, 157, 0, 156, 0, 159, 0, 158, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 252,
"material": ExtResource( 3 ),
"name": "sign_small",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 160
}

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="BoxShape" id=3]

[node name="SignSmall" type="Spatial"]
script = ExtResource( 2 )

[node name="SignMesh" type="Spatial" parent="."]

[node name="sign_small" type="MeshInstance" parent="SignMesh"]
transform = Transform( 0.999764, -0.0217313, 0, 0.0217313, 0.999764, 0, 0, 0, 1, 0, 0.0716785, -0.00198586 )
mesh = SubResource( 1 )
material/0 = null

[node name="SignMeshBuilding" type="Spatial" parent="."]
visible = false

[node name="sign_small" type="MeshInstance" parent="SignMeshBuilding"]
transform = Transform( 0.999764, -0.0217313, 0, 0.0217313, 0.999764, 0, 0, 0, 1, 0, 0.0716785, -0.00198586 )
material_override = ExtResource( 4 )
mesh = SubResource( 1 )
material/0 = null

[node name="InteractionRange" type="Area" parent="."]
input_ray_pickable = false
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionRange"]
transform = Transform( 1.43621, 0, 0, 0, -3.24517e-08, 0.742408, 0, -1.43621, -6.27789e-08, 0, 0.855606, 0 )
shape = SubResource( 2 )

[node name="Collidor" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Collidor"]
transform = Transform( 0.488328, 0, 0, 0, 0.885221, 0, 0, 0, 0.146197, -0.0206053, 0.791032, 0.0576462 )
shape = SubResource( 3 )

[node name="SignContentInput" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
placeholder = "Sign Text"

[node name="CenterContainer" type="CenterContainer" parent="SignContentInput"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="SignContentInput/CenterContainer"]
margin_left = 633.0
margin_top = 353.0
margin_right = 647.0
margin_bottom = 367.0

[node name="VBoxContainer" type="VBoxContainer" parent="SignContentInput/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 191.0
margin_bottom = 31.0

[node name="Description" type="Label" parent="SignContentInput/CenterContainer/PanelContainer/VBoxContainer"]
visible = false
margin_right = 184.0
margin_bottom = 14.0
text = "Enter Sign Text"

[node name="HBoxContainer" type="HBoxContainer" parent="SignContentInput/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 24.0

[node name="LineEdit" type="LineEdit" parent="SignContentInput/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="SendButton" type="Button" parent="SignContentInput/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 184.0
margin_bottom = 24.0
text = "Ok"
[connection signal="text_entered" from="SignContentInput" to="." method="_on_SignContentInput_text_entered"]
[connection signal="text_entered" from="SignContentInput/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="SignContentInput" method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="SignContentInput/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/SendButton" to="SignContentInput" method="_on_SendButton_pressed"]
